--- a/frontend/src/styles/components/_pagination.scss
+++ b/frontend/src/styles/components/_pagination.scss
@@ -1,9 +1,12 @@
-.th-pagination {  
+.th-pagination { 
+
   display: flex;
   width: 100%;
-  & ul{
-    width: 80%;
-    margin-left: 10%;
+  margin-top: 2rem;
+
+  & ul {
+    width: 100%;
+    margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
@@ -25,8 +28,8 @@
       }
     }
   }
-  &--lg {
-    & ul{
+  &.lg {
+    & ul {
       .page-link {
         min-width: 38px;
         height: 38px;
