--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -23,6 +23,7 @@
 // SECTIONS 
 @import 'sections/home';
 @import 'sections/transactions';
+@import 'sections/account';
 @import 'sections/blocks';
 @import 'sections/explorer';
 @import 'sections/overview';
