--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import 'modules/colors';
 @import 'modules/fonts';
 @import 'modules/input-types';
+@import 'modules/breakpoints';
 
 // PARTIALS
 @import 'partials/utils';
