--- a/frontend/src/styles/partials/_layout.scss
+++ b/frontend/src/styles/partials/_layout.scss
@@ -60,6 +60,10 @@ body {
     max-width: 1100px;
     margin: 0 auto 10rem;
 
+    @include breakpoint('tablet', max) {
+      width: 100%;
+    }
+
     .page-title {
       font-family: $font-title;
       font-size: 1.375rem;
@@ -67,7 +71,7 @@ body {
       text-align: center;
       letter-spacing: .375rem;
       width: 80%;
-      margin: 60px auto 40px;
+      margin: 5rem auto 2.5rem;
       &.transactions,
       &.account,
       &.blocks {
@@ -84,6 +88,14 @@ body {
       &.transactions:before { @include backgroundImage($url: '/images/icons/icon_transactions@2x.png'); }
       &.blocks:before { @include backgroundImage($url: '/images/icons/icon_blocks@2x.png'); }
       &.account:before { @include backgroundImage($url: '/images/icons/icon_account@2x.png'); }
+    }
+  }
+
+  @include breakpoint('phablet', max) {
+
+    .content .page-title {
+      margin-top: 3rem;
+      margin-bottom: 1.5rem;
     }
   }
 }
